Bug 1447925 - Add GetClipboardText() to get text data from clipboard, r=jhorak

GetClipboardText() calls gtk_clipboard_request_text() to request text clipboard data from Gtk+
and leave Gtk+ to do clipboard text format conversions. Also unify data getting code for text/data/targets.

MozReview-Commit-ID: 9DGSdOACho1